#4 - cve import - additional page requests with delay and api key